refactor existing headers and remove gamescore body to improve layout

--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,14 @@
   margin-top: 40px;
   margin-right: auto;
   margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
   border: solid black;
   max-width: 1170px;
 }
 
 .adContainer {
-  width: 728px;
+  width: 900px;
   height: 90px;
-  border: solid black;
+  border: solid lightseagreen;
   margin: auto;
 }
 
@@ -21,22 +19,73 @@
 }
 
 .scoreContainer {
-  border: solid red;
-  margin: 2em auto 0px auto;
+  border: solid lightsalmon;
+  margin-top: 2em;
+  display: flex;
+  flex-direction: column;
+  flex-basis: auto;
+  width: 100%;
 }
 
-.scoreContainer h1 {
+.gameHeader {
+  padding: 1em 0 .5em 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+/* .scoreContainer h2 {
   border-bottom: solid red;
   padding: .4em;
-  margin-bottom: 0;
+  margin-bott
+.squareOne {
+  border: solid skyblue;
+  height: 350px;
+  margin-right: 10px;
 }
 
-.teamContainer {
-  border: solid green;
-  margin: auto;
+.squareTwo {
+  border: solid teal;
+  height: 350px;
+  margin-left: 10px;
+  position: relative;
 }
 
-.displayedTeam {
+.scoreboxCard {
+  border: solid brown;
+  width: 100px;
+  height: 60px;
+  display: inline;
+  float: right;
+}
+
+.row {
+  position: relative;
+}
+
+.col-6 { 
+  padding: 0;
+  text-align: center;
+}
+
+.col-2 {
+  padding: 0;
+  text-align: center;
+  position: absolute;
+  background-color: khaki;
+  z-index: 1;
+  top: 130px;
+  left: 470px;
+}
+
+.versusCircle {
+  position: absolute;
+  text-align: center;
+  z-index: 1;
+  top: 50%;
+}  */
+
+/* .displayedTeam {
   width: 50%;
   height: auto;
   border: solid blue;
@@ -46,12 +95,13 @@
 .versusCircle {
   border: solid black;
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
+  width: 145px;
+  height: 145px;
   display: inline-block;
   position: absolute;
-  /* z-index: 1; */
-  /* top: 35%; */
+  z-index: 1;
+  top: 30%;
+  left: 4%;
   background-color: orange;
 }
 
@@ -76,4 +126,4 @@
   .container {
     width: 750px;
   }
-}
+} */ 
