add font-family to header, add team logo placeholders, and adjust padding accordingly

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   width: 900px;
   height: 90px;
   border: solid lightseagreen;
-  margin: auto;
+  margin: 2em auto 0 auto;
 }
 
 .adContainer h3 {
@@ -26,15 +26,19 @@
 
 .gameHeader {
   padding: 1em 0 .5em 1em;
+  font-family: franklin-gothic-urw !important;
+  text-transform: uppercase;
+  font-weight: normal !important;
 }
 
-.firstTeam {
+.firstTeam, .versus, .secondTeam {
   text-align: center;
   border: solid red;
+  padding: 9em 0 9em 0;
 }
 
 .firstTeam h1, .versus h1, .secondTeam h1 {
-  padding: 3.5em 0 3.5em 0;
+  /* padding: 3.5em 0 3.5em 0; */
 }
 
 .versus {
