--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,13 @@
 .scoreContainer {
   border: solid lightsalmon;
   margin-top: 2em;
+  padding: 0;
   width: 100%;
 }
 
 .headerRow {
   border: solid pink;
+  margin: 0;
 }
 
 .gameHeader {
@@ -45,10 +47,19 @@
   margin-top: 1em;
 }
 
-.firstTeam, .versus, .secondTeam {
+.firstTeam, .secondTeam {
   text-align: center;
   /* border: solid red; */
-  padding: 9em 0 9em 0;
+  padding: 6em 0 6em 0;
+}
+
+.versus {
+  text-align: center;
+  padding-top: 11em;
+}
+
+.versus h1 {
+  padding-bottom: 2em;
 }
 
 .secondTeam {
