--- a/src/App.css
+++ b/src/App.css
@@ -128,7 +128,7 @@
 }
 
 .rowPadding {
-  padding: 0 3em;
+  padding: 0 4em;
   background-color: lightgray;
 }
 
@@ -155,6 +155,19 @@
 
 .scoreBox h4 {
   padding: .5em;
+}
+.scoreFeedContainer .col-12 {
+  text-align: center;
+}
+
+.scoreFeedBoxes {
+  margin: 0;
+  width: 100%;
+}
+
+.scoreFeedBoxes .col-sm-2 {
+  text-align: center;
+  border: solid red;
 }
 
 /* postgame */
