--- a/src/App.css
+++ b/src/App.css
@@ -39,11 +39,6 @@
   /* font-weight: normal !important; */
 }
 
-.headerDivider {
-  width: 100%;
-  height: 12px;
-}
-
 .gameContainer {
   border-bottom: solid darkgray;
   padding-top: 1em;
@@ -61,64 +56,7 @@
 
 /* pregame specific*/
 
-/* .actionButtons {
-  border: solid red;
-} */
 
-.headerRow button {
-  margin: 1em .5em;
-  padding: .3em 1.2em;
-  background-color: rgb(120, 120, 120);
-  color: white;
-}
-
-.gameDescriptionContainer {
-  border-bottom: solid darkgray;
-  background-color: lightgray;
-  padding: 2em;
-}
-
-.gamePreviewContainer {
-  margin-top: 2.5em;
-  padding-top: 1em;
-  padding-bottom: 1em;
-  border-top: solid darkgray;
-  border-bottom: solid darkgray;
-  background-color: lightgray;
-}
-
-.pregameInfo {
-  /* margin-top: 1em; */
-}
-
-.pregameInfo button {
-  background-color: rgb(120, 120, 120);
-  color: white;
-  font-size: 1.5em;
-  font-weight: bold;
-  padding: .2em 1.2em;
-}
-
-.videoPreview h1 {
-  padding-top: 3em;
-  text-align: center;
-}
-
-.videoPreview {
-  background-color: lightgray;
-}
-
-.contentBoxRight {
-  border-top: solid darkgray;
-  border-bottom: solid darkgray;
-  border-left: solid darkgray;
-  padding: 1em;
-  background-color: white;
-}
-
-.pregameContent {
-  padding: 2em;
-}
 
 /* live game */
 
@@ -201,10 +139,11 @@
   margin: 0;
 }
 
-.final h5 {
+.final, .quarters h3 {
   text-align: center;
   padding: .5em 0 .4em 0;
 }
+
 
 /* @media (min-width: 1200px) {
   .container {
