add mobile breakpoint for ad container

--- a/src/css/Ad.css
+++ b/src/css/Ad.css
@@ -17,3 +17,9 @@
   text-align: center;
   margin: .65em;
 }
+
+@media only screen and (max-width: 768px) {
+  .adContainer {
+    width: 90%;
+  }
+}
