--- a/src/css/PreGame.css
+++ b/src/css/PreGame.css
@@ -64,3 +64,12 @@
 .preGameContent {
   padding: 2em;
 }
+
+/* Media Queries */
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
+}
