remove bootstrap carousel component

--- a/src/css/PreGame.css
+++ b/src/css/PreGame.css
@@ -122,7 +122,8 @@
   }
 
   .videoPreview h1 {
-    padding: 180px 100px;
+    padding-top: 180px;
+    padding-bottom: 180px;
   }
 
   .contentBoxRight {
